# hello-chris-rl-vllm-zelda

./: .gitignore  CLAUDE_TASKS.md  CONTRIBUTING.md  Containerfile  Containerfile.pufferlib  GOVERNANCE.md  LICENSE.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  build-worker-image.sh  pyproject.toml
agent/: __init__.py
agent/env/: __init__.py  dungeon_rewards.py  phase_rewards.py  ram_addresses.py  reward_wrapper.py  state_encoder.py  zelda_env.py
agent/evaluator/: __init__.py  exporter.py  ingest.py  phase_detector.py  reward_advisor.py  reward_model.py
agent/planner/: __init__.py  llm_client.py  macro_executor.py  policy_switch.py
agent/rl/: __init__.py  advancing_checkpoint.py  archive.py  model.py  (+3 more)
data/: zelda_oos_walkthrough.txt
new/: ARCHITECTURE.md  DEPLOY_YAML.md  EVAL_PIPELINE.md  EXPLORATION.md  GITOPS.md  JUDGES_RUBRIC.md  LLM_D_CONFIG.md  METRICS.md  OVERVIEW.md  POLICY_SWITCHING.md  README.md  REWARD_SHAPING.md  RISKS.md  ROADMAP.md  SCHEMAS.md  STATE_ENCODER.md  WORKBENCH.md
scripts/: cleanup_minio.py  dashboard.py  entrypoint.sh  monitor_training.py  run_epoch.py  run_evaluator.py  run_pipeline.py  run_rollouts.py  submit_job.py  trace_route.py  train_pufferlib.py  train_reward_model.py
tests/: test_archive.py  test_config.py  test_dungeon_rewards.py  test_evaluator.py  test_macro_executor.py  test_metrics.py  test_phase_rewards.py  test_policy_switch.py  test_rewards.py  test_state_encoder.py
visualization/: Containerfile  README.md  extract_link_sprites.py  generate_overworld.py  offline_renderer.py  requirements.txt  stream_wrapper.py
(+104 files in other folders)
