[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zelda-rl-agent"
version = "0.1.0"
description = "Hybrid RL + LLM agent for Zelda: Oracle of Seasons on OpenShift AI"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "gymnasium>=0.29.0",
    "pyboy>=2.6.0",
    "numpy>=1.24.0",
    "pufferlib>=2.0",
    "torch>=2.1.0",
    "httpx>=0.25.0",
    "boto3>=1.28.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
]
reward = [
    "scikit-learn>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
